[package]
authors = ["The ClamAV Team <clamav-bugs@external.cisco.com>"]
edition = "2018"
name = "clamav_rust"
version = "0.0.1"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
libc = "0.2.108"
log = {version = "*", features = ["std"]}
mbox = "0.6.0"
sysconf = "0.3.4"

[lib]
crate-type = ["staticlib"]
name = "clamav_rust"

[build-dependencies]
bindgen = "0.59"
